// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingDate individual is filling out form for a group 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan their journey"
    sectionPosition="Section 3 of 5"
  />
  <Question
    text="What date is the booking for?"
  />
  <DateInput
    dayFieldName="bookingDateDay"
    error={null}
    label="For example, 3 7 1985"
    monthFieldName="bookingDateMonth"
    yearFieldName="bookingDateYear"
  />
</FormSection>
`;

exports[`BookingDate individual is filling out form for someone else 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan their journey"
    sectionPosition="Section 2 of 4"
  />
  <Question
    text="What date is the booking for?"
  />
  <DateInput
    dayFieldName="bookingDateDay"
    error={null}
    label="For example, 3 7 1985"
    monthFieldName="bookingDateMonth"
    yearFieldName="bookingDateYear"
  />
</FormSection>
`;

exports[`BookingDate individual is filling out form for themselves 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan your journey"
    sectionPosition="Section 2 of 4"
  />
  <Question
    text="What date is the booking for?"
  />
  <DateInput
    dayFieldName="bookingDateDay"
    error={null}
    label="For example, 3 7 1985"
    monthFieldName="bookingDateMonth"
    yearFieldName="bookingDateYear"
  />
</FormSection>
`;

exports[`BookingDate renders with an error 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan your journey"
    sectionPosition="Section 2 of 4"
  />
  <Question
    text="What date is the booking for?"
  />
  <DateInput
    dayFieldName="bookingDateDay"
    error="Required"
    label="For example, 3 7 1985"
    monthFieldName="bookingDateMonth"
    yearFieldName="bookingDateYear"
  />
</FormSection>
`;
